# emotionful-bot

./: .gitignore  LICENSE  README.md  compile-locales.bat  generate-locales-template.bat  pyproject.toml  update-locales.bat
src/: __main__.py  config_reader.py
src/bot/handlers/: __init__.py  callback.py  fix.py  stars_donation.py  start_menu.py
src/bot/middlewares/: user_middleware.py
src/bot/utils/: random_heart.py
src/db/: __init__.py
src/db/models/: user.py
